# ur_openai_gym

./: BUILD-DOCKER-IMAGE.sh  README.md  RUN-DOCKER.sh  dependencies.rosinstall
docker/: Dockerfile  docker-compose.yml  launch_container.sh  launch_docker.sh  orocos_kinematics_dynamics.tar.xz
ur_gym/: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
ur_gym/src/ur_gym/: robot_env.py  robot_gazebo_env_goal.py
ur_gym/src/ur_gym/robot_envs/: ur_env.py
ur_gym/src/ur_gym/task_envs/: task_envs_list.py  ur3e_joint_space.py  ur3e_task_space.py
ur_gym/src/ur_gym/task_envs/results/20220503T113155.006706_SAC_task_space/: command.txt
ur_gym/src/ur_gym/task_envs/results/20220503T113329.004542_SAC_task_space/: args.txt
ur_gym/src/ur_gym/task_envs/results/20220503T113528.970957_SAC_task_space/: detailed_log.npy  events.out.tfevents.1651577728.localhost.1884.501.v2
ur_openai/: CMakeLists.txt  README.md  package.xml  setup.py
ur_openai/src/ur_openai/: cost_utils.py  robot_env.py  robot_gazebo_env_goal.py
ur_openai/src/ur_openai/robot_envs/: ur_env.py  utils.py
ur_openai/src/ur_openai/task_envs/: task_envs_list.py  ur3e_joint_space.py  ur3e_task_space.py
ur_openai/src/ur_openai/task_envs/results/20220503T113155.006706_SAC_task_space/: environ.txt  events.out.tfevents.1651577515.localhost.1464.501.v2
ur_rl/: CMakeLists.txt  README.md  package.xml
ur_rl/config/simulation/: joint_space.yaml  task_space.yaml
ur_rl/scripts/: evaluate_policy.py  simple_env.py  tf2rl_sac.py
(+4 files in other folders)
