<?xml version="1.0"?>
<package>
  <name>ur_rl</name>
  <version>0.1.0</version>
  <description>The ur_rl package</description>

  <maintainer email="beltran@hlab.sys.es.osaka-u.ac.jp">Cristian Beltran</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ur_openai</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>ur_openai</run_depend>
  <run_depend>rospy</run_depend>

</package>
